# schedule-writer

./: .envrc  .gitignore  LICENSE  README.ja.md  README.md  index.html  pyproject.toml
.github/workflows/: pages.yml
src/schedule_writer/: __init__.py  block_editor_html.py  builder.py  cli.py  standalone_html.py
tests/: test_block_editor_html.py  test_block_editor_parser.py  test_builder.py  test_cli.py  test_smoke.py  test_standalone_html.py
